# MemoMate

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
core/: __init__.py  __main__.py  server.py  store.py
examples/: claude_code_config.json
servers/: README.md  __init__.py
servers/arxiv_search/: README.md  __init__.py  __main__.py  server.py
servers/bilibili_search/: README.md  __init__.py  __main__.py  server.py
servers/wechat_mp/: README.md  __init__.py
servers/zhihu_search/: README.md  __init__.py
tests/: test_arxiv_search.py  test_bilibili_search.py  test_memory.py
